// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Poker style. test <PokerContainer /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  -webkit-animation: iEMDfD;
  animation: iEMDfD;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-duration: 300ms;
  animation-duration: 300ms;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: relative;
  z-index: 1;
}

@media (min-width:768px) {
  .c0 {
    width: 350px;
    margin: 0 auto;
  }
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerItem /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.8rem;
  border-radius: 10px;
  background-color: #ffffff;
  cursor: pointer;
  overflow: hidden;
  position: relative;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerItemInner /> snapshot. 1`] = `
.c0 {
  width: 90%;
  height: 94%;
  border-radius: 10px;
  color: #ffffff;
  background-color: #5bb1d4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  background-image: url(capoo-cat-logo-bg.png);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  padding: 0 5px 5px 0;
  font-size: 1.5rem;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerItemMask /> snapshot. 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
  z-index: 0;
  background: rgba(0,0,0,0);
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerItemWrap /> snapshot. 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100px;
  max-width: 22%;
  margin: 6.5px 0;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: 140%;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerListWrap /> snapshot. 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  z-index: 1;
  padding: 0 20px;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectContainer /> 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  -webkit-animation: iEMDfD;
  animation: iEMDfD;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-duration: 300ms;
  animation-duration: 300ms;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: auto;
}

.c0:after {
  content: "";
  display: block;
  padding-bottom: 154%;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectContainer /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  -webkit-animation: iEMDfD;
  animation: iEMDfD;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-duration: 300ms;
  animation-duration: 300ms;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: auto;
}

.c0:after {
  content: "";
  display: block;
  padding-bottom: 154%;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectMask /> snapshot. 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
  z-index: 0;
  background: rgba(0,0,0,0);
  z-index: 2;
  border-radius: 25px;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectSafari /> snapshot. 1`] = `
.c0 {
  width: 100%;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border-radius: 25px;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectWrap /> snapshot. 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
  padding: 0 20px;
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerSelectedItemFront /> snapshot. 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 25px;
  cursor: pointer;
  font-size: 5rem;
  color: #5AC9E8;
  background-color: #ffffff;
  background-size: contain;
  background-position: bottom;
  background-repeat: no-repeat;
  z-index: 1;
}

.c0.img-1 {
  background-image: url(card-1.gif);
}

.c0.img-2 {
  background-image: url(card-2.gif);
}

.c0.img-3 {
  background-image: url(card-3.gif);
}

.c0.img-4 {
  background-image: url(card-4.gif);
}

.c0.img-5 {
  background-image: url(card-5.gif);
}

.c0.img-6 {
  background-image: url(card-6.gif);
}

.c0.img-7 {
  background-image: url(card-7.gif);
}

.c0.img-8 {
  background-image: url(card-8.gif);
}

.c0.img-9 {
  background-image: url(card-9.gif);
}

.c0.img-10 {
  background-image: url(card-10.gif);
}

.c0.img-11 {
  background-image: url(card-11.gif);
}

.c0.img-12 {
  background-image: url(card-12.gif);
}

.c0.img-13 {
  background-image: url(card-13.gif);
}

<div
  class="c0"
/>
`;

exports[`test Poker style. test <PokerWrap /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-color: #aadff0;
  padding-top: 44px;
}

<div
  class="c0"
/>
`;
